--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Denis Carriere <@DenisCarriere>",
   "license": "MIT",
   "dependencies": {
+    "@mapbox/vector-tile": "^1.3.0",
     "@turf/helpers": "^4.1.0",
     "@turf/meta": "^4.1.0",
     "axios": "^0.16.1",
@@ -25,7 +26,6 @@
     "progress": "^2.0.0",
     "slippy-grid": "^2.1.1",
     "slippy-tile": "^2.1.0",
-    "vector-tile": "^1.3.0",
     "write-json-file": "^2.0.0"
   },
   "devDependencies": {
