--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@turf/meta": "^4.1.0",
     "axios": "^0.16.1",
     "d3-queue": "^3.0.5",
+    "glob": "^7.1.1",
     "global-mercator": "^2.7.0",
     "load-json-file": "^2.0.0",
     "lodash.range": "^3.2.0",
